#10 Update versions (#11)
Fixes #10