@@ -10,14 +10,18 @@
         <version>1.1.0-SNAPSHOT</version>
     </parent>
 
+    <properties>
+        <mainClassName>com.gluonhq.emoji.test.EmojiTextAreaTest</mainClassName>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>${javafx-maven-plugin-version}</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
-                    <mainClass>${mainClassName}</mainClass>
+                    <release>11</release>
                     <compilerArgs>
                         <arg>--add-opens</arg>
                         <arg>javafx.graphics/javafx.scene.text=richtextfx</arg>
@@ -30,6 +34,26 @@
                         <arg>--add-opens</arg>
                         <arg>javafx.graphics/com.sun.javafx.css=org.controlsfx.controls</arg>
                     </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>${javafx-maven-plugin-version}</version>
+                <configuration>
+                    <options>
+                        <arg>--add-opens</arg>
+                        <arg>javafx.graphics/javafx.scene.text=richtextfx</arg>
+                        <arg>--add-opens</arg>
+                        <arg>javafx.graphics/com.sun.javafx.text=richtextfx</arg>
+                        <arg>--add-opens</arg>
+                        <arg>javafx.graphics/com.sun.javafx.scene.text=richtextfx</arg>
+                        <arg>--add-opens</arg>
+                        <arg>javafx.graphics/com.sun.javafx.geom=richtextfx</arg>
+                        <arg>--add-opens</arg>
+                        <arg>javafx.graphics/com.sun.javafx.css=org.controlsfx.controls</arg>
+                    </options>
+                    <mainClass>${mainClassName}</mainClass>
                 </configuration>
             </plugin>
         </plugins>
@@ -49,12 +73,24 @@
         <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
-            <version>11.0.0</version>
+            <version>${controlsfxVersion}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.fxmisc.richtext</groupId>
             <artifactId>richtextfx</artifactId>
             <version>1.0.2-gluon</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>jakarta.json</groupId>
